# ppx_jsx_embed

./: .ocamlformat-ignore  LICENSE  README.md  dune-project  flake.nix  ppx_jsx_embed.opam  shell.nix
.github/workflows/: test.yml
nix/: default.nix  shell.nix  sources.nix
nix/ci/: test.nix
src/: dune  ppx_jsx_embed.ml
test/: dune  test.expected.ml  test.ml
